Comic Info Editor NEWS - User visible changes.

2025-04-08 Added new formats and Ctrl+Z command.
2025-02-22 Initial version.

-----

Copyright (C) 2025 Leonardo Alves da Costa.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.  This file is offered as-is,
without warranty of any kind.