@@ -1,0 +1,12 @@
+package com.github.leonhad.exception;
+
+public class SearchException extends Exception {
+
+    public SearchException(String message) {
+        super(message);
+    }
+
+    public SearchException(Throwable cause) {
+        super(cause);
+    }
+}
