@@ -1,0 +1,161 @@
+package com.github.leonhad.integration;
+
+import java.net.URL;
+import java.util.List;
+
+public class Manga {
+
+    private Integer id;
+    private String title;
+    private URL coverImage;
+    private String description;
+    private Integer volumes;
+    private Integer chapters;
+    private List<String> genres;
+    private List<String> tags;
+    private String format;
+    private Integer startDay;
+    private Integer startMonth;
+    private Integer startYear;
+    private Double averageScore;
+    private List<String> characters;
+    private List<Staff> staff;
+    private URL siteUrl;
+    private List<Site> externalLinks;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public void setId(Integer id) {
+        this.id = id;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public void setTitle(String title) {
+        this.title = title;
+    }
+
+    public URL getCoverImage() {
+        return coverImage;
+    }
+
+    public void setCoverImage(URL coverImage) {
+        this.coverImage = coverImage;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public Integer getVolumes() {
+        return volumes;
+    }
+
+    public void setVolumes(Integer volumes) {
+        this.volumes = volumes;
+    }
+
+    public Integer getChapters() {
+        return chapters;
+    }
+
+    public void setChapters(Integer chapters) {
+        this.chapters = chapters;
+    }
+
+    public List<String> getGenres() {
+        return genres;
+    }
+
+    public void setGenres(List<String> genres) {
+        this.genres = genres;
+    }
+
+    public List<String> getTags() {
+        return tags;
+    }
+
+    public void setTags(List<String> tags) {
+        this.tags = tags;
+    }
+
+    public String getFormat() {
+        return format;
+    }
+
+    public void setFormat(String format) {
+        this.format = format;
+    }
+
+    public Integer getStartDay() {
+        return startDay;
+    }
+
+    public void setStartDay(Integer startDay) {
+        this.startDay = startDay;
+    }
+
+    public Integer getStartMonth() {
+        return startMonth;
+    }
+
+    public void setStartMonth(Integer startMonth) {
+        this.startMonth = startMonth;
+    }
+
+    public Integer getStartYear() {
+        return startYear;
+    }
+
+    public void setStartYear(Integer startYear) {
+        this.startYear = startYear;
+    }
+
+    public Double getAverageScore() {
+        return averageScore;
+    }
+
+    public void setAverageScore(Double averageScore) {
+        this.averageScore = averageScore;
+    }
+
+    public List<String> getCharacters() {
+        return characters;
+    }
+
+    public void setCharacters(List<String> characters) {
+        this.characters = characters;
+    }
+
+    public List<Staff> getStaff() {
+        return staff;
+    }
+
+    public void setStaff(List<Staff> staff) {
+        this.staff = staff;
+    }
+
+    public URL getSiteUrl() {
+        return siteUrl;
+    }
+
+    public void setSiteUrl(URL siteUrl) {
+        this.siteUrl = siteUrl;
+    }
+
+    public List<Site> getExternalLinks() {
+        return externalLinks;
+    }
+
+    public void setExternalLinks(List<Site> externalLinks) {
+        this.externalLinks = externalLinks;
+    }
+}
