@@ -1,0 +1,23 @@
+package com.github.leonhad.integration;
+
+public class Staff {
+
+    private String name;
+    private String role;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getRole() {
+        return role;
+    }
+
+    public void setRole(String role) {
+        this.role = role;
+    }
+}
