@@ -1,0 +1,14 @@
+package com.github.leonhad.integration.anilist;
+
+public class AniListVariables {
+
+    private final String search;
+
+    public AniListVariables(String search) {
+        this.search = search;
+    }
+
+    public String getSearch() {
+        return search;
+    }
+}
