@@ -1,5 +1,6 @@
 Comic Info Editor NEWS - User visible changes.
 
+2025-06-12 Added AniList integration support.
 2025-04-08 Added new formats and Ctrl+Z command.
 2025-02-22 Initial version.
 
